[gd_scene load_steps=23 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://images/hero/guy12.png" type="Texture" id=2]
[ext_resource path="res://images/hero/guy1.png" type="Texture" id=3]
[ext_resource path="res://images/hero/guy5.png" type="Texture" id=4]
[ext_resource path="res://images/hero/guy9.png" type="Texture" id=5]
[ext_resource path="res://images/hero/guy6.png" type="Texture" id=6]
[ext_resource path="res://images/hero/guy7.png" type="Texture" id=7]
[ext_resource path="res://images/hero/guy8.png" type="Texture" id=8]
[ext_resource path="res://images/hero/guy2.png" type="Texture" id=9]
[ext_resource path="res://images/hero/guy3.png" type="Texture" id=10]
[ext_resource path="res://images/hero/guy4.png" type="Texture" id=11]
[ext_resource path="res://images/hero/guy10.png" type="Texture" id=12]
[ext_resource path="res://images/hero/guy11.png" type="Texture" id=13]
[ext_resource path="res://audio/walk.wav" type="Sample" id=14]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 8, 5.05935 )

[sub_resource type="Animation" id=2]

resource/name = "down"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ ExtResource( 3 ) ] }

[sub_resource type="Animation" id=3]

resource/name = "turn"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ ExtResource( 4 ) ] }

[sub_resource type="Animation" id=4]

resource/name = "up"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "update":1, "values":[ ExtResource( 5 ) ] }

[sub_resource type="Animation" id=5]

resource/name = "walk"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ] }

[sub_resource type="Animation" id=6]

length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ] }

[sub_resource type="Animation" id=7]

resource/name = "walk_up"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.1, 0.2, 0.3 ), "transitions":FloatArray( 1, 1, 1, 1 ), "update":1, "values":[ ExtResource( 5 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 2 ) ] }

[sub_resource type="SampleLibrary" id=8]

samples/walk = { "db":-5.0, "pitch":1.0, "sample":ExtResource( 14 ) }

[node name="player" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.60243, 0, 0, 0.981083, -0.174865, 2.56911 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/down = SubResource( 2 )
anims/turn = SubResource( 3 )
anims/up = SubResource( 4 )
anims/walk = SubResource( 5 )
anims/walk_down = SubResource( 6 )
anims/walk_up = SubResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 1
config/samples = SubResource( 8 )
config/pitch_random = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -0.174865, 2.56911 )
transform/scale = Vector2( 0.60243, 0.981083 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Position2D" type="Position2D" parent="."]

transform/pos = Vector2( 6.6223, 1.50356 )

[node name="action_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.4
one_shot = false
autostart = false

[node name="select_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="walk_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = false
autostart = false


